--- a/src/options.html
+++ b/src/options.html
@@ -1164,7 +1164,7 @@
               <div id="controls-container" class="fixed bottom-4 hidden rounded-md border-2 border-emerald-500 bg-neutral-900 p-4 drop-shadow transition-none">
                 <div class="grid w-full grid-flow-row gap-2 lg:grid-cols-3">
                   <button id="save-button" class="cursor-pointer rounded-md bg-emerald-500 p-2 transition hover:bg-emerald-600">
-                    <span class="text-base text-white">save (ctrl+s)</span>
+                    <span class="text-base text-white">save</span>
                   </button>
                   <button id="export-button" class="cursor-pointer rounded-md bg-indigo-500 p-2 transition hover:bg-indigo-600">
                     <span class="text-base text-white">save & export</span>
