--- a/src/options.html
+++ b/src/options.html
@@ -123,6 +123,30 @@
               </button>
             </div>
           </div>
+          <div id="title-effect-typewriter-section">
+            <div class="grid gap-4">
+              <div class="grid gap-2">
+                <p class="text-base text-white">title.typewriter.speed</p>
+                <div id="title-typewriter-speed-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
+                  <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
+                  <input id="title-typewriter-speed-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input speed (ms)..." />
+                </div>
+              </div>
+              <div class="grid gap-2">
+                <p class="text-base text-white">title.typewriter.remainCount</p>
+                <div id="title-typewriter-remain-count-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
+                  <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
+                  <input
+                    id="title-typewriter-remain-count-input"
+                    type="text"
+                    autocomplete="off"
+                    class="bg-transparent text-white placeholder-neutral-500 outline-none"
+                    placeholder="enter character count..."
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="grid gap-2 text-base">
             <p class="text-white">title.faviconType</p>
             <div class="grid grid-cols-2 gap-2">
@@ -134,20 +158,18 @@
               </button>
             </div>
           </div>
-          <div class="grid">
-            <div id="title-custom-favicon-upload-section">
-              <div class="grid gap-2">
-                <p class="text-base text-white">title.customFavicon</p>
-                <p class="text-base text-neutral-500">note: the customFavicon is not included when exporting and importing configs due to taking too much space</p>
-                <div class="grid grid-cols-2 gap-2">
-                  <input type="file" id="title-custom-favicon-upload" accept="image/*" class="w-full cursor-pointer rounded-md bg-cyan-500 p-2 text-base text-white transition hover:bg-cyan-600" />
-                  <button id="title-custom-favicon-reset-button" class="w-full cursor-pointer rounded-md bg-rose-500 p-2 transition hover:bg-rose-600">
-                    <span class="text-base text-white">reset</span>
-                  </button>
-                </div>
-                <p class="text-base text-neutral-500">live preview</p>
-                <div id="live-favicon-preview" class="grid aspect-square w-16 place-items-center overflow-hidden rounded-md bg-neutral-800"></div>
+          <div id="title-custom-favicon-upload-section">
+            <div class="grid gap-2">
+              <p class="text-base text-white">title.customFavicon</p>
+              <p class="text-base text-neutral-500">note: the customFavicon is not included when exporting and importing configs due to taking too much space</p>
+              <div class="grid grid-cols-2 gap-2">
+                <input type="file" id="title-custom-favicon-upload" accept="image/*" class="w-full cursor-pointer rounded-md bg-cyan-500 p-2 text-base text-white transition hover:bg-cyan-600" />
+                <button id="title-custom-favicon-reset-button" class="w-full cursor-pointer rounded-md bg-rose-500 p-2 transition hover:bg-rose-600">
+                  <span class="text-base text-white">reset</span>
+                </button>
               </div>
+              <p class="text-base text-neutral-500">live preview</p>
+              <div id="live-favicon-preview" class="grid aspect-square w-16 place-items-center overflow-hidden rounded-md bg-neutral-800"></div>
             </div>
           </div>
         </section>
