improve options page

--- a/src/options.html
+++ b/src/options.html
@@ -329,7 +329,9 @@
               <div id="wallpaper-url-section">
                 <div class="grid gap-2">
                   <p class="text-base text-white">wallpaper.url</p>
-                  <p class="text-base text-neutral-500">tip: you can use video file formats like MP4, MOV & more</p>
+                  <p class="text-base text-neutral-500">
+                    tip: you can use video file formats like MP4, MOV & more<br /><br />note: leaving this field empty will result in the default wallpaper being used
+                  </p>
                   <div id="wallpaper-url-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                     <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
                     <input id="wallpaper-url-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input url..." />
@@ -868,7 +870,7 @@
                   </label>
                 </div>
               </div>
-              <p class="text-base text-neutral-500">converts units directly from the search input <br /><br />e.g., '1 ft => 0.30 m'</p>
+              <p class="text-base text-neutral-500">converts units directly from the search input <br /><br />e.g., '1 ft => 0.3048 m'</p>
             </div>
           </div>
         </section>
