--- a/src/options.html
+++ b/src/options.html
@@ -323,15 +323,16 @@
                 <button id="wallpaper-type-file-upload-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
                   <span class="text-white">fileUpload</span>
                 </button>
+                <button id="wallpaper-type-default-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                  <span class="text-white">default</span>
+                </button>
               </div>
             </div>
             <div class="grid">
               <div id="wallpaper-url-section">
                 <div class="grid gap-2">
                   <p class="text-base text-white">wallpaper.url</p>
-                  <p class="text-base text-neutral-500">
-                    tip: you can use video file formats like MP4, MOV & more<br /><br />note: leaving this field empty will result in the default wallpaper being used
-                  </p>
+                  <p class="text-base text-neutral-500">tip: you can use video file formats like MP4, MOV & more</p>
                   <div id="wallpaper-url-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                     <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
                     <input id="wallpaper-url-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input url..." />
@@ -342,10 +343,12 @@
                 <div class="grid gap-2">
                   <p class="text-base text-white">wallpaper.fileUpload</p>
                   <p class="text-base text-neutral-500">
-                    tip: you can upload PNG, JPG, WEBP, GIF, MP4 file formats & more<br />
+                    tip: you can upload PNG, JPG, WEBP, GIF, MP4 file formats & more
+                    <br /><br />
                     it is recommended to scale images to match your resolution for faster loading times
+                    <br /><br />
+                    note: the fileUpload wallpaper is not included when exporting and importing configs due to taking too much space
                   </p>
-                  <p class="text-base text-neutral-500">note: the fileUpload wallpaper is not included when exporting and importing configs due to taking too much space</p>
                   <div class="grid grid-cols-2 gap-2">
                     <input
                       type="file"
