--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
               <span class="search-search-icon-color select-none font-semibold">->&nbsp;</span>
               <input id="search-input" type="text" autocomplete="off" class="font-search placeholder-color-search text-transition-none bg-transparent outline-none" />
             </div>
-            <div id="assistant-container" class="font-search corner-style hidden w-full grid-flow-row gap-2 p-2 text-base md:text-2xl"></div>
+            <div id="assistant-container" class="hidden w-full gap-2"></div>
             <div id="bookmarks-container"></div>
           </section>
           <section id="bookmark-search-section" class="hidden w-full">
