improve password generator assist and tweak generation logic

--- a/src/options.html
+++ b/src/options.html
@@ -907,7 +907,7 @@
                 <br /><br />
                 no data is sent anywhere; password generation happens on your device
                 <br /><br />
-                type 'password &lt;length&gt; &lt;flags&gt;' to generate a password
+                type 'pw &lt;length&gt; &lt;flags&gt;' or 'password &lt;length&gt; &lt;flags&gt;' to generate a password
                 <br /><br />
                 e.g., 'password 16 luns' generates a 16 character password with lowercase letters, uppercase letters, numbers, and symbols
                 <br /><br />
