--- a/src/options.html
+++ b/src/options.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="newtab/styles/tailwind.css" />
-    <link rel="stylesheet" href="shared/control.css" />
+    <link rel="stylesheet" href="shared/shared.css" />
     <link rel="stylesheet" href="assets/icons/remixicon/remixicon.css" />
     <link rel="stylesheet" href="options/styles/index.css" />
     <link rel="stylesheet" href="shared/sonner.css" />
