add currency conversion to search assist

--- a/src/options.html
+++ b/src/options.html
@@ -895,7 +895,10 @@
                 <br /><br />
                 e.g., '1 ft => 0.3048 m'
                 <br /><br />
-                supports length, weight, temperature, time, volume, area, speed, angle, and data
+                supports length, weight, temperature, time, volume, area, speed, angle, data, and 170+ currencies
+                <br /><br />
+                currency conversion rates are sourced from
+                <a href="https://hexarate.paikama.co" target="_blank" class="cursor-pointer text-blue-500 transition hover:text-blue-600">hexarate.paikama.co</a>
               </p>
             </div>
             <div class="grid gap-2">
